add NeoForge Support

--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -9,7 +9,7 @@ version = "${version}"
 displayName = "Dyeable Shulkers"
 authors = "HappyRespawnanchor"
 description = '''
-This is an example description! Tell everyone what your mod is about!
+Dye your Shulkers!
 '''
 #logoFile = ""
 
