--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,6 +1,7 @@
 modLoader = "javafml"
 loaderVersion = "[4,)"
-#issueTrackerURL = ""
+displayURL = "https://github.com/HappyRespawnanchor/dyeable_shulkers/issues"
+issueTrackerURL = "https://github.com/HappyRespawnanchor/dyeable_shulkers/issues"
 license = "CC0-1.0"
 
 [[mods]]
