--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -9,6 +9,9 @@ modId = "dyeable_shulkers"
 version = "${version}"
 displayName = "Dyeable Shulkers"
 authors = "HappyRespawnanchor"
+credits = '''
+Icon Designer: Yeettee
+'''
 description = '''
 Dye your Shulkers!
 '''
