--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,2 @@
 public net.minecraft.world.entity.monster.Shulker DATA_COLOR_ID # DATA_COLOR_ID
+public net.minecraft.world.level.block.entity.ShulkerBoxBlockEntity color # color
