--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -13,7 +13,7 @@ credits = '''
 Icon Designer: Yeettee
 '''
 description = '''
-Dye your Shulkers!
+Dye your Shulker & Shulker Box!
 '''
 logoFile = "dyeable_shulkers_logo.png"
 
