AW Fix, Icon rename , upto 1.21.3

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'dev.architectury.loom' version '1.6-SNAPSHOT' apply false
+    id 'dev.architectury.loom' version '1.7-SNAPSHOT' apply false
     id 'architectury-plugin' version '3.4-SNAPSHOT'
     id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
 }
@@ -43,9 +43,13 @@ subprojects {
         silentMojangMappingsLicense()
     }
 
+    jar {
+        from(rootProject.file('COPYING'))
+        from(rootProject.file('COPYING-INCOMPATIBLE.md'))
+    }
+
     dependencies {
         minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
-        //mappings loom.officialMojangMappings()
         mappings loom.layered() {
             officialMojangMappings()
             parchment("org.parchmentmc.data:parchment-1.21:2024.07.28@zip")
