--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -7,6 +7,10 @@ architectury {
     fabric()
 }
 
+loom {
+    accessWidenerPath = project(":common").loom.accessWidenerPath
+}
+
 configurations {
     common {
         canBeResolved = true
@@ -30,7 +34,7 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:$rootProject.fabric_api_version"
 
-    modImplementation("com.terraformersmc:modmenu:11.0.1")
+    modImplementation("com.terraformersmc:modmenu:12.0.0-beta.1")
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
@@ -50,9 +54,7 @@ shadowJar {
 }
 
 remapJar {
+    injectAccessWidener = true
     input.set shadowJar.archiveFile
 }
 
-loom{
-    accessWidenerPath = file("src/main/resources/dyeable_shulkers.accesswidener")
-}
