--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 2.1.0
+mod_version = 2.2.0
 maven_group = dev.architectury.com.happyrespawnanchor.dyeableshulkers
 archives_name = dyeable_shulkers
 enabled_platforms = fabric,neoforge
 
 # Minecraft properties
-minecraft_version = 1.21
+minecraft_version = 1.21.3
 
 # Dependencies
-fabric_loader_version = 0.16.2
-fabric_api_version = 0.102.0+1.21
-neoforge_version = 21.0.167
+fabric_loader_version = 0.16.7
+fabric_api_version = 0.106.1+1.21.3
+neoforge_version = 21.3.3-beta
