--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 2.2.0
+mod_version = 2.3.0+1.21.3
 maven_group = dev.architectury.com.happyrespawnanchor.dyeableshulkers
 archives_name = dyeable_shulkers
 enabled_platforms = fabric,neoforge
@@ -12,6 +12,6 @@ enabled_platforms = fabric,neoforge
 minecraft_version = 1.21.3
 
 # Dependencies
-fabric_loader_version = 0.16.7
-fabric_api_version = 0.106.1+1.21.3
-neoforge_version = 21.3.3-beta
+fabric_loader_version = 0.16.9
+fabric_api_version = 0.109.0+1.21.3
+neoforge_version = 21.3.35-beta
